@@ -1,3 +1,7 @@
+2015-01-21 04:10 +0000
+- twitch: updated vod links titles
+
+
 2015-01-21 04:00 +0000
 - twitch: updated new vod download
 
